--- a/references.bib
+++ b/references.bib
@@ -50,3 +50,10 @@
   note = {R package version 1.5.0},
   url = {https://stringr.tidyverse.org/}
 }
+
+@misc{nhl2022data,
+  title  = {NHL Play-by-Play Data, 2021--22 Season},
+  author = {{National Hockey League}},
+  year   = {2022},
+  url    = {https://www.nhl.com/stats/}
+}
